--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
   <body>
     <header class="page-header">
       <div class="container">
-      Tayna Lamborigini - t.me/Ol1kk
+      <a class="header-email"
+      href="mailto::olyalar2@gmail.com">olyalar2@gmail.com</a>
+      <a class="header-phone"
+      href="tel:79117648338">79117648338</a>
     </div>
     </header>
 
@@ -23,9 +26,13 @@
 
     <section class="intro">
       <div class="container">
+        <figure class="user-image">
+  <img src="files/user.jpg" width="928" height="536" alt="Фотография Игуаны Джонс">
+</figure>
+
       <h2 class="subheading">Давайте познакомимся</h2>
       <h3>Пара слов о себе</h3>
-      <p> Привет, меня зовут Оля. Закончила колледж по специальности "Менеджер по продажам" и поняла, что это совсем не моя сфера. Долгое время мечтала заниматься медициной, генетикой. Но помимо увлечения естественными науками меня всегда тянуло и к IT-технологиям. Медицина все же ушла на второй план, я поняла, что упустила возможность во время посвятить обучению 10 лет своей жизни. Так что увлечение генетикой стало скорее хобби. В целом меня интересуют и технологии в сфере здоровья. Но начать я решила с другого. За последние пару месяцев я досканально изучила все возможные профессии, связанные с IT и в итоге выбор мой пал именно на фронтенд. Мне нравится создавать что-то свое, я чувствую машину и код, как человеческий организм. Я кайфую от того, что я могу "лечить" код, создавать и совершенствовать его, чтоб он превратился в идеальный механизм, как то, что создает природа. </p>
+      <p> Привет, меня зовут Оля. Закончила колледж по специальности "Менеджер по продажам" и поняла, что это совсем не мое. Долгое время мечтала заниматься медициной, но так же всегда тянуло и к IT. С медициной все же не срослось и я перешла к другим своим интересам. За последние пару месяцев я досканально изучила все возможные профессии, связанные с IT. Выбор пал именно на фронтенд. Мне нравится создавать что-то свое, так же нравится учавствовать и в совместных проектах, так что именно эта сфера, думаю, по мне. </p>
       <h3>Чем могу быть полезен</h3>
       <p>Я только начинаю путь верстальщика, на данный момент времени я могу только учиться и наблюдать за работой других. Но мне безумно нравится, по этому
         <b>я приложу все усилия для прокачки своих скиллов и становления настоящим профессионалом</b>.А пока я могу выполнять несложные задачи, которые даются новичкам.Только в целях обучения.</p>
@@ -35,8 +42,12 @@
     <section class="portfolio">
       <div class="container">
       <h2 class="subheading">Мои работы</h2>
+      <figure class="project-image">
+        <img src="files/project.jpg" width="928" height="536" alt="Cайт инструктора Кекса">
+</figure>
 
       <h3>Сайт инструктора Кекса</h3>
+      <a class="button" href="source/project/index.html">Открыть страницу</a>
       <p>Небольшой лендинг о школе для начинающих.</p>
 
       <h3>Блог начинающего верстальщика</h3>
@@ -46,7 +57,12 @@
 
     <footer class="page-footer">
       <div class="container">
-      vk.com/id516048358
+        <a class="footer-email"
+        href="mailto::olyalar2@gmail.com">olyalar2@gmail.com</a>
+        <a class="header-phone"
+        href="tel:79117648338">79117648338</a>
+
+
     </div>
     </footer>
   </body>
