--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     </header>
 
-    <section class="hero-image">
+    <section class="intro">
       <div class="container">
       <h1 class="heading">Глупенький Мишка</h1>
       <p>Junior верстальщик</p>
@@ -36,6 +36,15 @@
       <h3>Чем могу быть полезен</h3>
       <p>Я только начинаю путь верстальщика, на данный момент времени я могу только учиться и наблюдать за работой других. Но мне безумно нравится, по этому
         <b>я приложу все усилия для прокачки своих скиллов и становления настоящим профессионалом</b>.А пока я могу выполнять несложные задачи, которые даются новичкам.Только в целях обучения.</p>
+</div>
+      <div class="skills">
+  <h3>Мои навыки</h3>
+  <dl class="skills-list">
+    <dt class="skill-html">HTML</dt>
+    <dd class="level"><div style="width: 60%;">60%</div></dd>
+    <dt class="skill-css">CSS</dt>
+    <dd class="level"><div style="width: 40%;">40%</div></dd>
+  </dl>
 </div>
     </section>
 
